--- a/DigitalClock/DigitalClock_envsettings.html
+++ b/DigitalClock/DigitalClock_envsettings.html
@@ -15,42 +15,42 @@
 </tr>
 <tr>
 <td>PATHEXT</td>
-<td>.COM;<br>.EXE;<br>.BAT;<br>.CMD;<br>.VBS;<br>.VBE;<br>.JS;<br>.JSE;<br>.WSF;<br>.WSH;<br>.MSC</td>
+<td>.COM;.EXE;.BAT;.CMD;.VBS;.VBE;.JS;.JSE;.WSF;.WSH;.MSC</td>
 <td><font color=gray>&lt;&nbsp;data not available&nbsp;&gt;</font></td>
 <td><font color=gray>&lt;&nbsp;data not available&nbsp;&gt;</font></td>
 <td><font color=gray>&lt;&nbsp;data not available&nbsp;&gt;</font></td>
 </tr>
 <tr>
 <td>Path</td>
-<td>C:\Xilinx\14.7\ISE_DS\ISE\\lib\nt64;<br>C:\Xilinx\14.7\ISE_DS\ISE\\bin\nt64;<br>C:\Xilinx\14.7\ISE_DS\ISE\bin\nt64;<br>C:\Xilinx\14.7\ISE_DS\ISE\lib\nt64;<br>C:\Xilinx\14.7\ISE_DS\ISE\..\..\..\DocNav;<br>C:\Xilinx\14.7\ISE_DS\PlanAhead\bin;<br>C:\Xilinx\14.7\ISE_DS\EDK\bin\nt64;<br>C:\Xilinx\14.7\ISE_DS\EDK\lib\nt64;<br>C:\Xilinx\14.7\ISE_DS\EDK\gnu\microblaze\nt\bin;<br>C:\Xilinx\14.7\ISE_DS\EDK\gnu\powerpc-eabi\nt\bin;<br>C:\Xilinx\14.7\ISE_DS\EDK\gnuwin\bin;<br>C:\Xilinx\14.7\ISE_DS\EDK\gnu\arm\nt\bin;<br>C:\Xilinx\14.7\ISE_DS\EDK\gnu\microblaze\linux_toolchain\nt64_be\bin;<br>C:\Xilinx\14.7\ISE_DS\EDK\gnu\microblaze\linux_toolchain\nt64_le\bin;<br>C:\Xilinx\14.7\ISE_DS\common\bin\nt64;<br>C:\Xilinx\14.7\ISE_DS\common\lib\nt64;<br>C:\MentorGraphics\7.9EE\SDD_HOME\common\win32\bin;<br>C:\MentorGraphics\7.9EE\SDD_HOME\common\win32\lib;<br>C:\ProgramData\Oracle\Java\javapath;<br>C:\SIMULIA\Commands;<br>C:\Program Files\Microsoft MPI\Bin\;<br>C:\Windows\system32;<br>C:\Windows;<br>C:\Windows\System32\Wbem;<br>C:\Windows\System32\WindowsPowerShell\v1.0\;<br>C:\Cadence\SPB_16.3\tools\bin;<br>C:\Cadence\SPB_16.3\tools\libutil\bin;<br>C:\Cadence\SPB_16.3\tools\fet\bin;<br>C:\Cadence\SPB_16.3\tools\pcb\bin;<br>C:\Cadence\SPB_16.3\tools\specctra\bin;<br>C:\Cadence\SPB_16.3\tools\PSpice;<br>C:\Cadence\SPB_16.3\tools\PSpice\Library;<br>C:\Cadence\SPB_16.3\tools\Capture;<br>C:\Cadence\SPB_16.3\OpenAccess\bin\win32\opt;<br>C:\Program Files (x86)\Microsoft SQL Server\90\Tools\binn\;<br>C:\Users\Administrator\.dnx\bin;<br>C:\Program Files\Microsoft DNX\Dnvm\;<br>C:\Program Files\Microsoft SQL Server\120\Tools\Binn\;<br>C:\Program Files\Microsoft SQL Server\130\Tools\Binn\;<br>C:\Program Files\Common Files\Autodesk Shared\;<br>C:\Program Files\Microsoft SQL Server\Client SDK\ODBC\110\Tools\Binn\;<br>C:\Program Files (x86)\Microsoft SQL Server\120\Tools\Binn\;<br>C:\Program Files\Microsoft SQL Server\120\DTS\Binn\;<br>C:\Program Files (x86)\Windows Kits\8.1\Windows Performance Toolkit\;<br>C:\Program Files (x86)\IVI Foundation\IVI\bin;<br>C:\Program Files\IVI Foundation\IVI\bin;<br>C:\Program Files (x86)\IVI Foundation\VISA\WinNT\Bin\;<br>C:\Program Files\IVI Foundation\VISA\Win64\Bin\;<br>C:\Program Files (x86)\IVI Foundation\VISA\WinNT\Bin;<br>C:\Program Files (x86)\PuTTY\;<br>C:\Program Files\MATLAB\R2017a\runtime\win64;<br>C:\Program Files\MATLAB\R2017a\bin;<br>C:/MentorGraphics/7.9EE/MGC_HOME.ixn/bin;<br>C:/MentorGraphics/7.9EE/MGC_HOME.ixn/lib</td>
+<td>C:<br>\Xilinx\14.7\ISE_DS\ISE\\lib\nt64;C:<br>\Xilinx\14.7\ISE_DS\ISE\\bin\nt64;C:<br>\Xilinx\14.7\ISE_DS\ISE\bin\nt64;C:<br>\Xilinx\14.7\ISE_DS\ISE\lib\nt64;C:<br>\Xilinx\14.7\ISE_DS\ISE\..\..\..\DocNav;C:<br>\Xilinx\14.7\ISE_DS\PlanAhead\bin;C:<br>\Xilinx\14.7\ISE_DS\EDK\bin\nt64;C:<br>\Xilinx\14.7\ISE_DS\EDK\lib\nt64;C:<br>\Xilinx\14.7\ISE_DS\EDK\gnu\microblaze\nt\bin;C:<br>\Xilinx\14.7\ISE_DS\EDK\gnu\powerpc-eabi\nt\bin;C:<br>\Xilinx\14.7\ISE_DS\EDK\gnuwin\bin;C:<br>\Xilinx\14.7\ISE_DS\EDK\gnu\arm\nt\bin;C:<br>\Xilinx\14.7\ISE_DS\EDK\gnu\microblaze\linux_toolchain\nt64_be\bin;C:<br>\Xilinx\14.7\ISE_DS\EDK\gnu\microblaze\linux_toolchain\nt64_le\bin;C:<br>\Xilinx\14.7\ISE_DS\common\bin\nt64;C:<br>\Xilinx\14.7\ISE_DS\common\lib\nt64;C:<br>\MentorGraphics\7.9EE\SDD_HOME\common\win32\bin;C:<br>\MentorGraphics\7.9EE\SDD_HOME\common\win32\lib;C:<br>\ProgramData\Oracle\Java\javapath;C:<br>\SIMULIA\Commands;C:<br>\Program Files\Microsoft MPI\Bin\;C:<br>\Windows\system32;C:<br>\Windows;C:<br>\Windows\System32\Wbem;C:<br>\Windows\System32\WindowsPowerShell\v1.0\;C:<br>\Cadence\SPB_16.3\tools\bin;C:<br>\Cadence\SPB_16.3\tools\libutil\bin;C:<br>\Cadence\SPB_16.3\tools\fet\bin;C:<br>\Cadence\SPB_16.3\tools\pcb\bin;C:<br>\Cadence\SPB_16.3\tools\specctra\bin;C:<br>\Cadence\SPB_16.3\tools\PSpice;C:<br>\Cadence\SPB_16.3\tools\PSpice\Library;C:<br>\Cadence\SPB_16.3\tools\Capture;C:<br>\Cadence\SPB_16.3\OpenAccess\bin\win32\opt;C:<br>\Program Files (x86)\Microsoft SQL Server\90\Tools\binn\;C:<br>\Users\Administrator\.dnx\bin;C:<br>\Program Files\Microsoft DNX\Dnvm\;C:<br>\Program Files\Microsoft SQL Server\120\Tools\Binn\;C:<br>\Program Files\Microsoft SQL Server\130\Tools\Binn\;C:<br>\Program Files\Common Files\Autodesk Shared\;C:<br>\Program Files\Microsoft SQL Server\Client SDK\ODBC\110\Tools\Binn\;C:<br>\Program Files (x86)\Microsoft SQL Server\120\Tools\Binn\;C:<br>\Program Files\Microsoft SQL Server\120\DTS\Binn\;C:<br>\Program Files (x86)\Windows Kits\8.1\Windows Performance Toolkit\;C:<br>\Program Files (x86)\IVI Foundation\IVI\bin;C:<br>\Program Files\IVI Foundation\IVI\bin;C:<br>\Program Files (x86)\IVI Foundation\VISA\WinNT\Bin\;C:<br>\Program Files\IVI Foundation\VISA\Win64\Bin\;C:<br>\Program Files (x86)\IVI Foundation\VISA\WinNT\Bin;C:<br>\Program Files (x86)\PuTTY\;C:<br>\Program Files\MATLAB\R2017a\runtime\win64;C:<br>\Program Files\MATLAB\R2017a\bin;C:<br>/MentorGraphics/7.9EE/MGC_HOME.ixn/bin;C:<br>/MentorGraphics/7.9EE/MGC_HOME.ixn/lib</td>
 <td><font color=gray>&lt;&nbsp;data not available&nbsp;&gt;</font></td>
 <td><font color=gray>&lt;&nbsp;data not available&nbsp;&gt;</font></td>
 <td><font color=gray>&lt;&nbsp;data not available&nbsp;&gt;</font></td>
 </tr>
 <tr>
 <td>XILINX</td>
-<td>C:\Xilinx\14.7\ISE_DS\ISE\</td>
+<td>C:<br>\Xilinx\14.7\ISE_DS\ISE\</td>
 <td><font color=gray>&lt;&nbsp;data not available&nbsp;&gt;</font></td>
 <td><font color=gray>&lt;&nbsp;data not available&nbsp;&gt;</font></td>
 <td><font color=gray>&lt;&nbsp;data not available&nbsp;&gt;</font></td>
 </tr>
 <tr>
 <td>XILINX_DSP</td>
-<td>C:\Xilinx\14.7\ISE_DS\ISE</td>
+<td>C:<br>\Xilinx\14.7\ISE_DS\ISE</td>
 <td><font color=gray>&lt;&nbsp;data not available&nbsp;&gt;</font></td>
 <td><font color=gray>&lt;&nbsp;data not available&nbsp;&gt;</font></td>
 <td><font color=gray>&lt;&nbsp;data not available&nbsp;&gt;</font></td>
 </tr>
 <tr>
 <td>XILINX_EDK</td>
-<td>C:\Xilinx\14.7\ISE_DS\EDK</td>
+<td>C:<br>\Xilinx\14.7\ISE_DS\EDK</td>
 <td><font color=gray>&lt;&nbsp;data not available&nbsp;&gt;</font></td>
 <td><font color=gray>&lt;&nbsp;data not available&nbsp;&gt;</font></td>
 <td><font color=gray>&lt;&nbsp;data not available&nbsp;&gt;</font></td>
 </tr>
 <tr>
 <td>XILINX_PLANAHEAD</td>
-<td>C:\Xilinx\14.7\ISE_DS\PlanAhead</td>
+<td>C:<br>\Xilinx\14.7\ISE_DS\PlanAhead</td>
 <td><font color=gray>&lt;&nbsp;data not available&nbsp;&gt;</font></td>
 <td><font color=gray>&lt;&nbsp;data not available&nbsp;&gt;</font></td>
 <td><font color=gray>&lt;&nbsp;data not available&nbsp;&gt;</font></td>
