--- a/DigitalClock/DigitalClock_envsettings.html
+++ b/DigitalClock/DigitalClock_envsettings.html
@@ -14,43 +14,50 @@
 <td><b>par</b></td>
 </tr>
 <tr>
-<td>PATHEXT</td>
-<td>.COM;.EXE;.BAT;.CMD;.VBS;.VBE;.JS;.JSE;.WSF;.WSH;.MSC</td>
+<td>LD_LIBRARY_PATH</td>
+<td>/opt/Xilinx/14.7/ISE_DS/ISE//lib/lin64:<br>/opt/Xilinx/14.7/ISE_DS/ISE/lib/lin64:<br>/opt/Xilinx/14.7/ISE_DS/ISE/smartmodel/lin64/installed_lin64/lib:<br>/opt/Xilinx/14.7/ISE_DS/ISE/sysgen/lib:<br>/opt/Xilinx/14.7/ISE_DS/EDK/lib/lin64:<br>/opt/Xilinx/14.7/ISE_DS/common/lib/lin64</td>
 <td><font color=gray>&lt;&nbsp;data not available&nbsp;&gt;</font></td>
 <td><font color=gray>&lt;&nbsp;data not available&nbsp;&gt;</font></td>
 <td><font color=gray>&lt;&nbsp;data not available&nbsp;&gt;</font></td>
 </tr>
 <tr>
-<td>Path</td>
-<td>C:<br>\Xilinx\14.7\ISE_DS\ISE\\lib\nt64;C:<br>\Xilinx\14.7\ISE_DS\ISE\\bin\nt64;C:<br>\Xilinx\14.7\ISE_DS\ISE\bin\nt64;C:<br>\Xilinx\14.7\ISE_DS\ISE\lib\nt64;C:<br>\Xilinx\14.7\ISE_DS\ISE\..\..\..\DocNav;C:<br>\Xilinx\14.7\ISE_DS\PlanAhead\bin;C:<br>\Xilinx\14.7\ISE_DS\EDK\bin\nt64;C:<br>\Xilinx\14.7\ISE_DS\EDK\lib\nt64;C:<br>\Xilinx\14.7\ISE_DS\EDK\gnu\microblaze\nt\bin;C:<br>\Xilinx\14.7\ISE_DS\EDK\gnu\powerpc-eabi\nt\bin;C:<br>\Xilinx\14.7\ISE_DS\EDK\gnuwin\bin;C:<br>\Xilinx\14.7\ISE_DS\EDK\gnu\arm\nt\bin;C:<br>\Xilinx\14.7\ISE_DS\EDK\gnu\microblaze\linux_toolchain\nt64_be\bin;C:<br>\Xilinx\14.7\ISE_DS\EDK\gnu\microblaze\linux_toolchain\nt64_le\bin;C:<br>\Xilinx\14.7\ISE_DS\common\bin\nt64;C:<br>\Xilinx\14.7\ISE_DS\common\lib\nt64;C:<br>\MentorGraphics\7.9EE\SDD_HOME\common\win32\bin;C:<br>\MentorGraphics\7.9EE\SDD_HOME\common\win32\lib;C:<br>\ProgramData\Oracle\Java\javapath;C:<br>\SIMULIA\Commands;C:<br>\Program Files\Microsoft MPI\Bin\;C:<br>\Windows\system32;C:<br>\Windows;C:<br>\Windows\System32\Wbem;C:<br>\Windows\System32\WindowsPowerShell\v1.0\;C:<br>\Cadence\SPB_16.3\tools\bin;C:<br>\Cadence\SPB_16.3\tools\libutil\bin;C:<br>\Cadence\SPB_16.3\tools\fet\bin;C:<br>\Cadence\SPB_16.3\tools\pcb\bin;C:<br>\Cadence\SPB_16.3\tools\specctra\bin;C:<br>\Cadence\SPB_16.3\tools\PSpice;C:<br>\Cadence\SPB_16.3\tools\PSpice\Library;C:<br>\Cadence\SPB_16.3\tools\Capture;C:<br>\Cadence\SPB_16.3\OpenAccess\bin\win32\opt;C:<br>\Program Files (x86)\Microsoft SQL Server\90\Tools\binn\;C:<br>\Users\Administrator\.dnx\bin;C:<br>\Program Files\Microsoft DNX\Dnvm\;C:<br>\Program Files\Microsoft SQL Server\120\Tools\Binn\;C:<br>\Program Files\Microsoft SQL Server\130\Tools\Binn\;C:<br>\Program Files\Common Files\Autodesk Shared\;C:<br>\Program Files\Microsoft SQL Server\Client SDK\ODBC\110\Tools\Binn\;C:<br>\Program Files (x86)\Microsoft SQL Server\120\Tools\Binn\;C:<br>\Program Files\Microsoft SQL Server\120\DTS\Binn\;C:<br>\Program Files (x86)\Windows Kits\8.1\Windows Performance Toolkit\;C:<br>\Program Files (x86)\IVI Foundation\IVI\bin;C:<br>\Program Files\IVI Foundation\IVI\bin;C:<br>\Program Files (x86)\IVI Foundation\VISA\WinNT\Bin\;C:<br>\Program Files\IVI Foundation\VISA\Win64\Bin\;C:<br>\Program Files (x86)\IVI Foundation\VISA\WinNT\Bin;C:<br>\Program Files (x86)\PuTTY\;C:<br>\Program Files\MATLAB\R2017a\runtime\win64;C:<br>\Program Files\MATLAB\R2017a\bin;C:<br>/MentorGraphics/7.9EE/MGC_HOME.ixn/bin;C:<br>/MentorGraphics/7.9EE/MGC_HOME.ixn/lib</td>
+<td>LMC_HOME</td>
+<td>/opt/Xilinx/14.7/ISE_DS/ISE/smartmodel/lin64/installed_lin64</td>
+<td><font color=gray>&lt;&nbsp;data not available&nbsp;&gt;</font></td>
+<td><font color=gray>&lt;&nbsp;data not available&nbsp;&gt;</font></td>
+<td><font color=gray>&lt;&nbsp;data not available&nbsp;&gt;</font></td>
+</tr>
+<tr>
+<td>PATH</td>
+<td>/opt/Xilinx/14.7/ISE_DS/ISE//bin/lin64:<br>/opt/Xilinx/14.7/ISE_DS/ISE/bin/lin64:<br>/opt/Xilinx/14.7/ISE_DS/ISE/sysgen/util:<br>/opt/Xilinx/14.7/ISE_DS/ISE/sysgen/bin:<br>/opt/Xilinx/14.7/ISE_DS/ISE/../../../DocNav:<br>/opt/Xilinx/14.7/ISE_DS/PlanAhead/bin:<br>/opt/Xilinx/14.7/ISE_DS/EDK/bin/lin64:<br>/opt/Xilinx/14.7/ISE_DS/EDK/gnu/microblaze/lin/bin:<br>/opt/Xilinx/14.7/ISE_DS/EDK/gnu/powerpc-eabi/lin/bin:<br>/opt/Xilinx/14.7/ISE_DS/EDK/gnu/arm/lin/bin:<br>/opt/Xilinx/14.7/ISE_DS/EDK/gnu/microblaze/linux_toolchain/lin64_be/bin:<br>/opt/Xilinx/14.7/ISE_DS/EDK/gnu/microblaze/linux_toolchain/lin64_le/bin:<br>/opt/Xilinx/14.7/ISE_DS/common/bin/lin64:<br>/usr/bin:<br>/bin</td>
 <td><font color=gray>&lt;&nbsp;data not available&nbsp;&gt;</font></td>
 <td><font color=gray>&lt;&nbsp;data not available&nbsp;&gt;</font></td>
 <td><font color=gray>&lt;&nbsp;data not available&nbsp;&gt;</font></td>
 </tr>
 <tr>
 <td>XILINX</td>
-<td>C:<br>\Xilinx\14.7\ISE_DS\ISE\</td>
+<td>/opt/Xilinx/14.7/ISE_DS/ISE/</td>
 <td><font color=gray>&lt;&nbsp;data not available&nbsp;&gt;</font></td>
 <td><font color=gray>&lt;&nbsp;data not available&nbsp;&gt;</font></td>
 <td><font color=gray>&lt;&nbsp;data not available&nbsp;&gt;</font></td>
 </tr>
 <tr>
 <td>XILINX_DSP</td>
-<td>C:<br>\Xilinx\14.7\ISE_DS\ISE</td>
+<td>/opt/Xilinx/14.7/ISE_DS/ISE</td>
 <td><font color=gray>&lt;&nbsp;data not available&nbsp;&gt;</font></td>
 <td><font color=gray>&lt;&nbsp;data not available&nbsp;&gt;</font></td>
 <td><font color=gray>&lt;&nbsp;data not available&nbsp;&gt;</font></td>
 </tr>
 <tr>
 <td>XILINX_EDK</td>
-<td>C:<br>\Xilinx\14.7\ISE_DS\EDK</td>
+<td>/opt/Xilinx/14.7/ISE_DS/EDK</td>
 <td><font color=gray>&lt;&nbsp;data not available&nbsp;&gt;</font></td>
 <td><font color=gray>&lt;&nbsp;data not available&nbsp;&gt;</font></td>
 <td><font color=gray>&lt;&nbsp;data not available&nbsp;&gt;</font></td>
 </tr>
 <tr>
 <td>XILINX_PLANAHEAD</td>
-<td>C:<br>\Xilinx\14.7\ISE_DS\PlanAhead</td>
+<td>/opt/Xilinx/14.7/ISE_DS/PlanAhead</td>
 <td><font color=gray>&lt;&nbsp;data not available&nbsp;&gt;</font></td>
 <td><font color=gray>&lt;&nbsp;data not available&nbsp;&gt;</font></td>
 <td><font color=gray>&lt;&nbsp;data not available&nbsp;&gt;</font></td>
@@ -358,28 +365,28 @@
 </tr>
 <tr>
 <td>CPU Architecture/Speed</td>
-<td>Intel(R) Xeon(R) CPU E5-1607 v4 @ 3.10GHz/3092 MHz</td>
+<td>Intel(R) Core(TM) i5-7200U CPU @ 2.50GHz/2712.000 MHz</td>
 <td><font color=gray>&lt;&nbsp; data not available &nbsp;&gt;</font></td>
 <td><font color=gray>&lt;&nbsp; data not available &nbsp;&gt;</font></td>
 <td><font color=gray>&lt;&nbsp; data not available &nbsp;&gt;</font></td>
 </tr>
 <tr>
 <td>Host</td>
-<td>ENG-E207PC28</td>
+<td>localhost.localdomain</td>
 <td><font color=gray>&lt;&nbsp; data not available &nbsp;&gt;</font></td>
 <td><font color=gray>&lt;&nbsp; data not available &nbsp;&gt;</font></td>
 <td><font color=gray>&lt;&nbsp; data not available &nbsp;&gt;</font></td>
 </tr>
 <tr>
 <td>OS Name</td>
-<td>Microsoft Windows 7 , 64-bit</td>
+<td>OracleServer</td>
 <td><font color=gray>&lt;&nbsp; data not available &nbsp;&gt;</font></td>
 <td><font color=gray>&lt;&nbsp; data not available &nbsp;&gt;</font></td>
 <td><font color=gray>&lt;&nbsp; data not available &nbsp;&gt;</font></td>
 </tr>
 <tr>
 <td>OS Release</td>
-<td>Service Pack 1  (build 7601)</td>
+<td>Oracle Linux Server release 6.4</td>
 <td><font color=gray>&lt;&nbsp; data not available &nbsp;&gt;</font></td>
 <td><font color=gray>&lt;&nbsp; data not available &nbsp;&gt;</font></td>
 <td><font color=gray>&lt;&nbsp; data not available &nbsp;&gt;</font></td>
