--- a/DigitalClock/top_envsettings.html
+++ b/DigitalClock/top_envsettings.html
@@ -515,10 +515,10 @@
 </tr>
 <tr>
 <td>CPU Architecture/Speed</td>
-<td>Intel(R) Core(TM) i5-4590 CPU @ 3.30GHz/3299.050 MHz</td>
-<td>Intel(R) Core(TM) i5-4590 CPU @ 3.30GHz/3299.050 MHz</td>
-<td>Intel(R) Core(TM) i5-4590 CPU @ 3.30GHz/3299.050 MHz</td>
-<td>Intel(R) Core(TM) i5-4590 CPU @ 3.30GHz/3299.050 MHz</td>
+<td>Intel(R) Core(TM) i5-7200U CPU @ 2.50GHz/2712.000 MHz</td>
+<td>Intel(R) Core(TM) i5-7200U CPU @ 2.50GHz/2712.000 MHz</td>
+<td>Intel(R) Core(TM) i5-7200U CPU @ 2.50GHz/2712.000 MHz</td>
+<td>Intel(R) Core(TM) i5-7200U CPU @ 2.50GHz/2712.000 MHz</td>
 </tr>
 <tr>
 <td>Host</td>
