--- a/DigitalClock/top_summary.html
+++ b/DigitalClock/top_summary.html
@@ -2,7 +2,7 @@
 <BODY TEXT='#000000' BGCOLOR='#FFFFFF' LINK='#0000EE' VLINK='#551A8B' ALINK='#FF0000'>
 <TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'>
-<TD ALIGN=CENTER COLSPAN='4'><B>top Project Status (11/07/2018 - 06:44:04)</B></TD></TR>
+<TD ALIGN=CENTER COLSPAN='4'><B>top Project Status (11/07/2018 - 23:01:22)</B></TD></TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Project File:</B></TD>
 <TD>DigitalClock.xise</TD>
@@ -25,30 +25,30 @@ No Errors</TD>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Product Version:</B></TD><TD>ISE 14.7</TD>
 <TD BGCOLOR='#FFFF99'><UL><LI><B>Warnings:</B></LI></UL></TD>
-<TD ALIGN=LEFT><A HREF_DISABLED='/home/ise/XIlinxShare/Digital-Clock/DigitalClock/_xmsgs/*.xmsgs?&DataKey=Warning'>33 Warnings (0 new)</A></TD>
+<TD ALIGN=LEFT><A HREF_DISABLED='/home/ise/VMShare/Digital-Clock/DigitalClock/_xmsgs/*.xmsgs?&DataKey=Warning'>51 Warnings (1 new)</A></TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Design Goal:</B></dif></TD>
 <TD>Balanced</TD>
 <TD BGCOLOR='#FFFF99'><UL><LI><B>Routing Results:</B></LI></UL></TD>
 <TD>
-<A HREF_DISABLED='/home/ise/XIlinxShare/Digital-Clock/DigitalClock/top.unroutes'>All Signals Completely Routed</A></TD>
+<A HREF_DISABLED='/home/ise/VMShare/Digital-Clock/DigitalClock/top.unroutes'>All Signals Completely Routed</A></TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Design Strategy:</B></dif></TD>
 <TD><A HREF_DISABLED='Xilinx Default (unlocked)?&DataKey=Strategy'>Xilinx Default (unlocked)</A></TD>
 <TD BGCOLOR='#FFFF99'><UL><LI><B>Timing Constraints:</B></LI></UL></TD>
 <TD>
-<A HREF_DISABLED='/home/ise/XIlinxShare/Digital-Clock/DigitalClock/top.ptwx?&DataKey=ConstraintsData'>All Constraints Met</A></TD>
+<A HREF_DISABLED='/home/ise/VMShare/Digital-Clock/DigitalClock/top.ptwx?&DataKey=ConstraintsData'>All Constraints Met</A></TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Environment:</B></dif></TD>
 <TD>
-<A HREF_DISABLED='/home/ise/XIlinxShare/Digital-Clock/DigitalClock/top_envsettings.html'>
+<A HREF_DISABLED='/home/ise/VMShare/Digital-Clock/DigitalClock/top_envsettings.html'>
 System Settings</A>
 </TD>
 <TD BGCOLOR='#FFFF99'><UL><LI><B>Final Timing Score:</B></LI></UL></TD>
-<TD>0 &nbsp;<A HREF_DISABLED='/home/ise/XIlinxShare/Digital-Clock/DigitalClock/top.twx?&DataKey=XmlTimingReport'>(Timing Report)</A></TD>
+<TD>0 &nbsp;<A HREF_DISABLED='/home/ise/VMShare/Digital-Clock/DigitalClock/top.twx?&DataKey=XmlTimingReport'>(Timing Report)</A></TD>
 </TR>
 </TABLE>
 
@@ -60,13 +60,13 @@ System Settings</A>
 <TD ALIGN=LEFT><B>Slice Logic Utilization</B></TD><TD><B>Used</B></TD><TD><B>Available</B></TD><TD><B>Utilization</B></TD><TD COLSPAN='2'><B>Note(s)</B></TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of Slice Registers</TD>
-<TD ALIGN=RIGHT>78</TD>
+<TD ALIGN=RIGHT>96</TD>
 <TD ALIGN=RIGHT>11,440</TD>
 <TD ALIGN=RIGHT>1%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number used as Flip Flops</TD>
-<TD ALIGN=RIGHT>78</TD>
+<TD ALIGN=RIGHT>96</TD>
 <TD>&nbsp;</TD>
 <TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
@@ -90,31 +90,31 @@ System Settings</A>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of Slice LUTs</TD>
-<TD ALIGN=RIGHT>155</TD>
+<TD ALIGN=RIGHT>164</TD>
 <TD ALIGN=RIGHT>5,720</TD>
 <TD ALIGN=RIGHT>2%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number used as logic</TD>
-<TD ALIGN=RIGHT>154</TD>
+<TD ALIGN=RIGHT>162</TD>
 <TD ALIGN=RIGHT>5,720</TD>
 <TD ALIGN=RIGHT>2%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Number using O6 output only</TD>
-<TD ALIGN=RIGHT>106</TD>
+<TD ALIGN=RIGHT>102</TD>
 <TD>&nbsp;</TD>
 <TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Number using O5 output only</TD>
-<TD ALIGN=RIGHT>24</TD>
+<TD ALIGN=RIGHT>39</TD>
 <TD>&nbsp;</TD>
 <TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Number using O5 and O6</TD>
-<TD ALIGN=RIGHT>24</TD>
+<TD ALIGN=RIGHT>21</TD>
 <TD>&nbsp;</TD>
 <TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
@@ -132,7 +132,7 @@ System Settings</A>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number used exclusively as route-thrus</TD>
-<TD ALIGN=RIGHT>1</TD>
+<TD ALIGN=RIGHT>2</TD>
 <TD>&nbsp;</TD>
 <TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
@@ -144,7 +144,7 @@ System Settings</A>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Number with same-slice carry load</TD>
-<TD ALIGN=RIGHT>1</TD>
+<TD ALIGN=RIGHT>2</TD>
 <TD>&nbsp;</TD>
 <TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
@@ -156,62 +156,62 @@ System Settings</A>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of occupied Slices</TD>
-<TD ALIGN=RIGHT>51</TD>
+<TD ALIGN=RIGHT>54</TD>
 <TD ALIGN=RIGHT>1,430</TD>
 <TD ALIGN=RIGHT>3%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of MUXCYs used</TD>
-<TD ALIGN=RIGHT>28</TD>
+<TD ALIGN=RIGHT>48</TD>
 <TD ALIGN=RIGHT>2,860</TD>
 <TD ALIGN=RIGHT>1%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of LUT Flip Flop pairs used</TD>
-<TD ALIGN=RIGHT>158</TD>
+<TD ALIGN=RIGHT>170</TD>
 <TD>&nbsp;</TD>
 <TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number with an unused Flip Flop</TD>
-<TD ALIGN=RIGHT>85</TD>
-<TD ALIGN=RIGHT>158</TD>
-<TD ALIGN=RIGHT>53%</TD>
+<TD ALIGN=RIGHT>79</TD>
+<TD ALIGN=RIGHT>170</TD>
+<TD ALIGN=RIGHT>46%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number with an unused LUT</TD>
-<TD ALIGN=RIGHT>3</TD>
-<TD ALIGN=RIGHT>158</TD>
-<TD ALIGN=RIGHT>1%</TD>
+<TD ALIGN=RIGHT>6</TD>
+<TD ALIGN=RIGHT>170</TD>
+<TD ALIGN=RIGHT>3%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number of fully used LUT-FF pairs</TD>
-<TD ALIGN=RIGHT>70</TD>
-<TD ALIGN=RIGHT>158</TD>
-<TD ALIGN=RIGHT>44%</TD>
+<TD ALIGN=RIGHT>85</TD>
+<TD ALIGN=RIGHT>170</TD>
+<TD ALIGN=RIGHT>50%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number of unique control sets</TD>
-<TD ALIGN=RIGHT>9</TD>
+<TD ALIGN=RIGHT>10</TD>
 <TD>&nbsp;</TD>
 <TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number of slice register sites lost<BR>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;to control set restrictions</TD>
-<TD ALIGN=RIGHT>42</TD>
+<TD ALIGN=RIGHT>48</TD>
 <TD ALIGN=RIGHT>11,440</TD>
 <TD ALIGN=RIGHT>1%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
-<TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of bonded <A HREF_DISABLED='/home/ise/XIlinxShare/Digital-Clock/DigitalClock/top_map.xrpt?&DataKey=IOBProperties'>IOBs</A></TD>
-<TD ALIGN=RIGHT>26</TD>
+<TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of bonded <A HREF_DISABLED='/home/ise/VMShare/Digital-Clock/DigitalClock/top_map.xrpt?&DataKey=IOBProperties'>IOBs</A></TD>
+<TD ALIGN=RIGHT>27</TD>
 <TD ALIGN=RIGHT>102</TD>
-<TD ALIGN=RIGHT>25%</TD>
+<TD ALIGN=RIGHT>26%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number of LOCed IOBs</TD>
-<TD ALIGN=RIGHT>26</TD>
-<TD ALIGN=RIGHT>26</TD>
+<TD ALIGN=RIGHT>27</TD>
+<TD ALIGN=RIGHT>27</TD>
 <TD ALIGN=RIGHT>100%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
@@ -354,7 +354,7 @@ System Settings</A>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Average Fanout of Non-Clock Nets</TD>
-<TD ALIGN=RIGHT>3.26</TD>
+<TD ALIGN=RIGHT>3.25</TD>
 <TD>&nbsp;</TD>
 <TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
@@ -369,18 +369,18 @@ System Settings</A>
 <TD BGCOLOR='#FFFF99'><B>Final Timing Score:</B></TD>
 <TD>0 (Setup: 0, Hold: 0)</TD>
 <TD BGCOLOR='#FFFF99'><B>Pinout Data:</B></TD>
-<TD COLSPAN='2'><A HREF_DISABLED='/home/ise/XIlinxShare/Digital-Clock/DigitalClock/top_par.xrpt?&DataKey=PinoutData'>Pinout Report</A></TD>
+<TD COLSPAN='2'><A HREF_DISABLED='/home/ise/VMShare/Digital-Clock/DigitalClock/top_par.xrpt?&DataKey=PinoutData'>Pinout Report</A></TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Routing Results:</B></TD><TD>
-<A HREF_DISABLED='/home/ise/XIlinxShare/Digital-Clock/DigitalClock/top.unroutes'>All Signals Completely Routed</A></TD>
+<A HREF_DISABLED='/home/ise/VMShare/Digital-Clock/DigitalClock/top.unroutes'>All Signals Completely Routed</A></TD>
 <TD BGCOLOR='#FFFF99'><B>Clock Data:</B></TD>
-<TD COLSPAN='2'><A HREF_DISABLED='/home/ise/XIlinxShare/Digital-Clock/DigitalClock/top_par.xrpt?&DataKey=ClocksData'>Clock Report</A></TD>
+<TD COLSPAN='2'><A HREF_DISABLED='/home/ise/VMShare/Digital-Clock/DigitalClock/top_par.xrpt?&DataKey=ClocksData'>Clock Report</A></TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Timing Constraints:</B></TD>
 <TD>
-<A HREF_DISABLED='/home/ise/XIlinxShare/Digital-Clock/DigitalClock/top.ptwx?&DataKey=ConstraintsData'>All Constraints Met</A></TD>
+<A HREF_DISABLED='/home/ise/VMShare/Digital-Clock/DigitalClock/top.ptwx?&DataKey=ConstraintsData'>All Constraints Met</A></TD>
 <TD BGCOLOR='#FFFF99'><B>&nbsp;</B></TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TABLE>
@@ -391,20 +391,20 @@ System Settings</A>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='6'><B>Detailed Reports</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=DetailedReports"><B>[-]</B></a></TD></TR>
 <TR BGCOLOR='#FFFF99'><TD><B>Report Name</B></TD><TD><B>Status</B></TD><TD><B>Generated</B></TD>
 <TD ALIGN=LEFT><B>Errors</B></TD><TD ALIGN=LEFT><B>Warnings</B></TD><TD ALIGN=LEFT COLSPAN='2'><B>Infos</B></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='/home/ise/XIlinxShare/Digital-Clock/DigitalClock/top.syr'>Synthesis Report</A></TD><TD>Current</TD><TD>Wed Nov 7 06:43:28 2018</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='/home/ise/XIlinxShare/Digital-Clock/DigitalClock/_xmsgs/xst.xmsgs?&DataKey=Warning'>27 Warnings (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='/home/ise/XIlinxShare/Digital-Clock/DigitalClock/_xmsgs/xst.xmsgs?&DataKey=Info'>4 Infos (0 new)</A></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='/home/ise/XIlinxShare/Digital-Clock/DigitalClock/top.bld'>Translation Report</A></TD><TD>Current</TD><TD>Wed Nov 7 06:43:33 2018</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'>0</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='/home/ise/XIlinxShare/Digital-Clock/DigitalClock/top_map.mrp'>Map Report</A></TD><TD>Current</TD><TD>Wed Nov 7 06:43:43 2018</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='/home/ise/XIlinxShare/Digital-Clock/DigitalClock/_xmsgs/map.xmsgs?&DataKey=Info'>8 Infos (0 new)</A></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='/home/ise/XIlinxShare/Digital-Clock/DigitalClock/top.par'>Place and Route Report</A></TD><TD>Current</TD><TD>Wed Nov 7 06:43:51 2018</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='/home/ise/XIlinxShare/Digital-Clock/DigitalClock/_xmsgs/par.xmsgs?&DataKey=Warning'>6 Warnings (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='/home/ise/XIlinxShare/Digital-Clock/DigitalClock/_xmsgs/par.xmsgs?&DataKey=Info'>3 Infos (0 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='/home/ise/VMShare/Digital-Clock/DigitalClock/top.syr'>Synthesis Report</A></TD><TD>Current</TD><TD>Wed Nov 7 22:59:53 2018</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='/home/ise/VMShare/Digital-Clock/DigitalClock/_xmsgs/xst.xmsgs?&DataKey=Warning'>45 Warnings (1 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='/home/ise/VMShare/Digital-Clock/DigitalClock/_xmsgs/xst.xmsgs?&DataKey=Info'>1 Info (0 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='/home/ise/VMShare/Digital-Clock/DigitalClock/top.bld'>Translation Report</A></TD><TD>Current</TD><TD>Wed Nov 7 23:00:06 2018</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'>0</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='/home/ise/VMShare/Digital-Clock/DigitalClock/top_map.mrp'>Map Report</A></TD><TD>Current</TD><TD>Wed Nov 7 23:00:32 2018</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='/home/ise/VMShare/Digital-Clock/DigitalClock/_xmsgs/map.xmsgs?&DataKey=Info'>8 Infos (0 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='/home/ise/VMShare/Digital-Clock/DigitalClock/top.par'>Place and Route Report</A></TD><TD>Current</TD><TD>Wed Nov 7 23:00:50 2018</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='/home/ise/VMShare/Digital-Clock/DigitalClock/_xmsgs/par.xmsgs?&DataKey=Warning'>6 Warnings (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='/home/ise/VMShare/Digital-Clock/DigitalClock/_xmsgs/par.xmsgs?&DataKey=Info'>3 Infos (0 new)</A></TD></TR>
 <TR ALIGN=LEFT><TD>Power Report</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='/home/ise/XIlinxShare/Digital-Clock/DigitalClock/top.twr'>Post-PAR Static Timing Report</A></TD><TD>Current</TD><TD>Wed Nov 7 06:43:57 2018</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='/home/ise/XIlinxShare/Digital-Clock/DigitalClock/_xmsgs/trce.xmsgs?&DataKey=Info'>4 Infos (0 new)</A></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='/home/ise/XIlinxShare/Digital-Clock/DigitalClock/top.bgn'>Bitgen Report</A></TD><TD>Current</TD><TD>Wed Nov 7 06:44:04 2018</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'>0</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='/home/ise/VMShare/Digital-Clock/DigitalClock/top.twr'>Post-PAR Static Timing Report</A></TD><TD>Current</TD><TD>Wed Nov 7 23:01:03 2018</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='/home/ise/VMShare/Digital-Clock/DigitalClock/_xmsgs/trce.xmsgs?&DataKey=Info'>4 Infos (0 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='/home/ise/VMShare/Digital-Clock/DigitalClock/top.bgn'>Bitgen Report</A></TD><TD>Current</TD><TD>Wed Nov 7 23:01:22 2018</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'>0</TD></TR>
 </TABLE>
 &nbsp;<BR><TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='3'><B>Secondary Reports</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=SecondaryReports"><B>[-]</B></a></TD></TR>
 <TR BGCOLOR='#FFFF99'><TD><B>Report Name</B></TD><TD><B>Status</B></TD><TD COLSPAN='2'><B>Generated</B></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='/home/ise/XIlinxShare/Digital-Clock/DigitalClock/webtalk.log'>WebTalk Log File</A></TD><TD>Current</TD><TD COLSPAN='2'>Wed Nov 7 06:44:05 2018</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='/home/ise/VMShare/Digital-Clock/DigitalClock/webtalk.log'>WebTalk Log File</A></TD><TD>Current</TD><TD COLSPAN='2'>Wed Nov 7 23:01:23 2018</TD></TR>
 </TABLE>
 
 
-<br><center><b>Date Generated:</b> 11/07/2018 - 06:44:05</center>
+<br><center><b>Date Generated:</b> 11/07/2018 - 23:01:22</center>
 </BODY></HTML>
